--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-
+    <uses-permission android:name="android.permission.INTERNET" />
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -13,7 +13,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.NgomaApp"
-
+        android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity android:name=".ClassesTableActivity" />
         <activity android:name=".SubjectsTableActivity" />
@@ -27,6 +27,8 @@
             </intent-filter>
         </activity>
         <activity android:name="com.example.ngomaapp.AnswerActivity" />
+        <activity android:name="com.example.ngomaapp.SetupActivity" />
+
     </application>
 
 </manifest>
