--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,7 +39,7 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment:2.5.2'
     implementation 'androidx.navigation:navigation-ui:2.5.2'
     implementation 'androidx.preference:preference:1.2.0'
-    implementation files('src\\main\\java\\com\\example\\ngomaapp\\mysql-connector-j-8.0.33.jar')
+    //implementation files('src\\main\\java\\com\\example\\ngomaapp\\mysql-connector-j-8.0.33.jar')
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
