--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -15,20 +16,22 @@
         android:theme="@style/Theme.NgomaApp"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
+        <activity
+            android:name=".LoginActivity" />
         <activity android:name=".ClassesTableActivity" />
         <activity android:name=".SubjectsTableActivity" />
         <activity android:name=".TopicsTableActivity" />
         <activity android:name=".QuestionsTableActivity" />
-        <activity android:name="com.example.ngomaapp.MainActivity"
+        <activity
+            android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.example.ngomaapp.AnswerActivity" />
-        <activity android:name="com.example.ngomaapp.SetupActivity" />
-
+        <activity android:name=".AnswerActivity" />
     </application>
 
 </manifest>
