added setup activity to set test server details

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".AnswerActivity" />
+        <activity android:name="com.example.ngomaapp.SetupActivity" />
     </application>
 
 </manifest>
