--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,12 +17,8 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity android:name=".LoginActivity" />
-        <activity android:name=".ClassesTableActivity" />
-        <activity android:name=".SubjectsTableActivity" />
-        <activity android:name=".TopicsTableActivity" />
-        <activity android:name=".QuestionsTableActivity" />
         <activity
-            android:name=".MainActivity"
+            android:name=".ClassesTableActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -30,11 +26,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".SubjectsTableActivity" />
+        <activity android:name=".TopicsTableActivity" />
+        <activity android:name=".QuestionsTableActivity" />
         <activity android:name=".AnswerActivity" />
         <activity android:name="com.example.ngomaapp.SetupActivity" />
-        <activity
-            android:name="com.example.ngomaapp.Playground"
-            android:exported="true" />
+        <activity android:name="com.example.ngomaapp.PremiumSetup" />
     </application>
 
 </manifest>
