--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.NgomaApp"
         android:usesCleartextTraffic="true"
-        tools:targetApi="31">
+        tools:targetApi="34">
+        <service
+            android:name=".UtilityService"
+            android:enabled="true"
+            android:exported="true"></service>
+
         <activity android:name=".LoginActivity" />
         <activity
             android:name=".ClassesTableActivity"
@@ -30,7 +35,7 @@
         <activity android:name=".TopicsTableActivity" />
         <activity android:name=".QuestionsTableActivity" />
         <activity android:name=".AnswerActivity" />
-        <activity android:name="com.example.ngomaapp.SetupActivity" />
+        <activity android:name=".SetupActivity" />
     </application>
 
 </manifest>
